--- a/compose.yml
+++ b/compose.yml
@@ -25,5 +25,18 @@ services:
     depends_on:
       - db
 
+  storage:
+    image: minio/minio:latest
+    command: minio server /var/lib/minio/data --console-address ":9001"
+    environment:
+      - MINIO_ROOT_USER=${MINIO_ROOT_USER}
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD}
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - storage:/var/lib/minio/data
+
 volumes:
   db_data:
+  storage:
