--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,8 +12,8 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://localhost:8080/realms/mfa
-          jwk-set-uri: http://localhost:8080/realms/mfa/protocol/openid-connect/certs
+          issuer-uri: https://keycloak.dara-it.site/realms/mfa
+          jwk-set-uri: https://keycloak.dara-it.site/realms/mfa/protocol/openid-connect/certs
 
   jpa:
     database: postgresql
