--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation 'io.minio:minio:8.6.0'
     implementation 'org.springframework.boot:spring-boot-starter-quartz'
     testImplementation 'org.springframework.boot:spring-boot-starter-quartz-test'
+    implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.12.0'
+    implementation 'io.socket:socket.io-client:2.1.2'
 }
 
 dependencyManagement {
