add profile, dev, prod

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -134,3 +134,6 @@ resilience4j:
         failureRateThreshold: 50
         waitDurationInOpenState: 10s
         automaticTransitionFromOpenToHalfOpenEnabled: true
+
+keycloak:
+  token-endpoint: http://localhost:8080realms/mfa/protocol/openid-connect/token
