--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -5,6 +5,10 @@ spring:
     username: ${SPRING_DATASOURCE_USERNAME}
     password: ${SPRING_DATASOURCE_PASSWORD}
 
+  jackson:
+    serialization:
+      write-dates-as-timestamps: false
+
   security:
     oauth2:
       resourceserver:
@@ -20,6 +24,8 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        jdbc:
+          time_zone: UTC
 
   cloud:
     openfeign:
@@ -41,6 +47,8 @@ spring:
           mime-types: application/json,application/xml,text/plain
         response:
           enabled: true
+      circuitbreaker:
+        enabled: true
 
   servlet:
     multipart:
@@ -113,3 +121,19 @@ management:
     web:
       exposure:
         include: "*"
+
+socketio:
+  server:
+    url: http://localhost:3001
+
+resilience4j:
+  circuitbreaker:
+    instances:
+      authentication:
+        slidingWindowSize: 10
+        failureRateThreshold: 50
+        waitDurationInOpenState: 10s
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+
+keycloak:
+  token-endpoint: https://keycloak.dara-it.site/realms/mfa/protocol/openid-connect/token
